force-app/idp/main/default/objects/IDP_Section__mdt/IDP_Section__mdt.object-meta.xml
<CustomObject>
    <label>IDP Section</label>
    <pluralLabel>IDP Sections</pluralLabel>
    <description>A region of the document: Fixed (one record) or Repeating (one record per row of a JSON array). Every IDP Mapping Rule belongs to exactly one section.</description>
</CustomObject>