force-app/idp/main/default/objects/IDP_Section__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <label>Active</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description>Untick to disable the section and every rule attached to it.</description>
</CustomField>