force-app/idp/main/default/objects/IDP_Section__mdt/fields/Mapping_Set__c.field-meta.xml
<CustomField>
    <fullName>Mapping_Set__c</fullName>
    <label>Mapping Set</label>
    <type>MetadataRelationship</type>
    <referenceTo>IDP_Mapping_Set__mdt</referenceTo>
    <relationshipLabel>Sections</relationshipLabel>
    <relationshipName>Sections</relationshipName>
    <required>true</required>
    <description>The mapping set this section belongs to.</description>
</CustomField>