force-app/idp/main/default/objects/IDP_Section__mdt/fields/Match_Field__c.field-meta.xml
<CustomField>
    <fullName>Match_Field__c</fullName>
    <label>Match Field</label>
    <type>MetadataRelationship</type>
    <referenceTo>FieldDefinition</referenceTo>
    <metadataRelationshipControllingField>IDP_Section__mdt.Target_Object__c</metadataRelationshipControllingField>
    <relationshipLabel>IDP Sections (Match Field)</relationshipLabel>
    <relationshipName>IDP_Sections_Match</relationshipName>
    <description>Repeating only: the queryable field a row is identified by. Does not need to be an External Id.</description>
</CustomField>