force-app/idp/main/default/objects/IDP_Section__mdt/fields/Match_Value__c.field-meta.xml
<CustomField>
    <fullName>Match_Value__c</fullName>
    <label>Match Value</label>
    <type>Text</type>
    <length>255</length>
    <description>Repeating only: template producing each row's key. Tokens: {json:path} from the document root, {row:path} from the current row, {row:index} 0-based, {row:number} 1-based.</description>
</CustomField>