force-app/idp/main/default/objects/IDP_Section__mdt/fields/Parent_Section__c.field-meta.xml
<CustomField>
    <fullName>Parent_Section__c</fullName>
    <label>Parent Section</label>
    <type>Text</type>
    <length>80</length>
    <description>Repeating only: DeveloperName of the section whose resolved record constrains this section's rows (rows must look up to it). Blank discovers the constraining record from the schema. Text rather than a relationship because custom metadata forbids self-relationships; the loader validates the name and reports a config issue when it is unknown.</description>
</CustomField>