force-app/idp/main/default/objects/IDP_Section__mdt/fields/Record_Filter__c.field-meta.xml
<CustomField>
    <fullName>Record_Filter__c</fullName>
    <label>Record Filter</label>
    <type>Text</type>
    <length>255</length>
    <description>Optional extra WHERE fragment narrowing the section's record(s). {json:path} tokens are bound, never concatenated. Supersedes a rule's Anchor Filter.</description>
</CustomField>