force-app/idp/main/default/objects/IDP_Section__mdt/fields/Row_Path__c.field-meta.xml
<CustomField>
    <fullName>Row_Path__c</fullName>
    <label>Row Path</label>
    <type>Text</type>
    <length>255</length>
    <description>Repeating only: JSON path to the array of rows, e.g. "Details" or "statement.transactions".</description>
</CustomField>