force-app/idp/main/default/objects/IDP_Section__mdt/fields/Section_Type__c.field-meta.xml
<CustomField>
    <fullName>Section_Type__c</fullName>
    <label>Section Type</label>
    <type>Picklist</type>
    <required>true</required>
    <description>Fixed writes one record; Repeating iterates the array at Row Path, one record per row.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed</fullName>
                <default>true</default>
                <label>Fixed</label>
            </value>
            <value>
                <fullName>Repeating</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>