force-app/idp/main/default/objects/IDP_Section__mdt/fields/Target_Object__c.field-meta.xml
<CustomField>
    <fullName>Target_Object__c</fullName>
    <label>Target Object</label>
    <type>MetadataRelationship</type>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>IDP Sections</relationshipLabel>
    <relationshipName>IDP_Sections</relationshipName>
    <required>true</required>
    <description>Object this section's rules write to (or compare against). Must be reachable from the document; attached rules inherit it.</description>
</CustomField>